# HelloCoturn

./: CMakeLists.txt  README.md
cmake/: SET_LOCAL_PATH.cmake.example  config.h.in
doc/: notes.md
include/: MessageBuilder.h
include/seeker/: common.h  logger.h  random.h  secure.h
modules/allocation/: CMakeLists.txt  sendAllocationReq.cpp
modules/hash/: CMakeLists.txt
modules/hash/include/: hmac.h
modules/ice8445/: CMakeLists.txt  sendAllocationReq.cpp
modules/ice8445/include/: MessageBuilder.h
src/: main.cpp
